k8s/pgadmin_conf.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin-deployment
  labels:
    app: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      volumes:
        - name: pv-config
          persistentVolumeClaim:
            claimName: pvc-pgadmin
      containers:
        - name: pgadmin
          image: docker.io/dpage/pgadmin4
          ports:
            - containerPort: 80
          volumeMounts:
            - name: pv-config
              mountPath: "/var/lib/pgadmin"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 10
            failureThreshold: 20
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
spec:
  type: ClusterIP
  selector:
    app: pgadmin
  ports:
    - name: http
      protocol: TCP
      port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
spec:
  rules:
    - host: pgadmin.mydomain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin-service
                port:
                  number: 80
