k8s/rfp_app_conf.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rfp-app-deployment
  labels:
    app: rfp-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rfp-app
  template:
    metadata:
      labels:
        app: rfp-app
    spec:
      containers:
        - name: rust-financial-platform-api
          image: ghcr.io/randommm/rust-financial-platform
          ports:
            - containerPort: 7500
          command: ["/bin/bash"]
          args:
            - -c
            - >-
              cargo run --release --bin rust-financial-platform-api
        - name: rust-financial-platform-pipeline
          image: ghcr.io/randommm/rust-financial-platform
          command: ["/bin/bash"]
          args:
            - -c
            - >-
              cargo run --release --bin rust-financial-platform-pipeline
---
apiVersion: v1
kind: Service
metadata:
  name: rfp-app-service
spec:
  type: ClusterIP
  selector:
    app: rfp-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 7500
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rfp-app-ingress
spec:
  rules:
    - host: mydomain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rfp-app-service
                port:
                  number: 80
